# SenseOpen

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  crud.py  database.py  main.py  models.py  schemas.py
backend/sense/: config.py  geometry.py  live_manager.py  post_processor.py  reid.py  reid_osnet.py  video_process.py
backend/sense/track_tools/: botsort.py  bytetrack.py
backend/static/reports/: 5b7f2d6c-5c0c-4238-b9de-4abdb6affdf7_report.xlsx
frontend/: package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: DeviceList.css  DeviceList.jsx  VideoHistory.css  VideoHistory.jsx  VideoUpload.css  VideoUpload.jsx
frontend/src/services/: api.js
tools/: comando_convert_tensorrt.txt  hyp_dataset.yaml  teste_gpu.py  train_dataset.py  video_capture.py
